tests/baselines/reference/constructorInvocationWithTooFewTypeArgs.errors.txt
tests/cases/compiler/constructorInvocationWithTooFewTypeArgs.ts(9,9): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/compiler/constructorInvocationWithTooFewTypeArgs.ts (1 errors) ====
    class D<T, U> {
    
       x: T
    
       y: U
    
    }
     
    var d = new D<number>();
            ~~~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    